# QiEDA

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: shaders.cmake
include/qicore/: Units.hpp  qicore.hpp
include/qicore/geometry/: Circle.hpp  Line.hpp  Shape.hpp
include/qicore/graphics/: BoundingBox.hpp  Color.hpp  GLPainter.hpp  GLShader.hpp  GraphicArc.hpp  GraphicCircle.hpp  GraphicItem.hpp  GraphicLayer.hpp  GraphicLine.hpp  GraphicRectangle.hpp  GraphicText.hpp  GridLayer.hpp  Point.hpp
include/qicore/ui/: GLScrollArea.hpp  GLWidget.hpp  QiMainWindow.hpp
include/qigerber/: Gerber.hpp  qigerber.hpp
include/rocore/: BaseException.hpp  Settings.hpp  Units.hpp  rocore.hpp
include/rocore/graphics/: BoundingBox.hpp  Color.hpp  GLPainter.hpp  GLShader.hpp  GraphicArc.hpp  GraphicCircle.hpp  GraphicDocument.hpp  GraphicGrid.hpp  GraphicItem.hpp  GraphicLayer.hpp  GraphicLine.hpp  GraphicPainter.hpp  GraphicPoly.hpp  GraphicRawLine.hpp  GraphicRectangle.hpp  GraphicText.hpp  GridLayer.hpp  Point.hpp  TestLayer.hpp  clip2tri.hpp
include/rocore/projects/: Base.hpp  Loader.hpp  Project.hpp  ProjectException.hpp  ProjectViewItem.hpp  ProjectViewItemModel.hpp  Viewer.hpp
include/rocore/ui/: DocumentView.hpp  GLScrollArea.hpp  GLWidget.hpp  GerberDocumentView.hpp  InputWithUnits.hpp  LayerView.hpp  LayerViewItem.hpp  LayerViewItemModel.hpp  ProjectExplorer.hpp  ProjectExplorerItem.hpp  ProjectExplorerItemModel.hpp  ProjectView.hpp  QiMainWindow.hpp
include/rogerber/: CoordinateConverter.hpp  Gerber.hpp  GerberCommands.hpp  GerberCoordinateTranslator.hpp  GerberException.hpp  GerberExecutor.hpp  GerberProcessor.hpp  rogerber.hpp
include/util/: make_unique.hpp
src/: CMakeLists.txt
src/nanovg/: CMakeLists.txt
src/qicore/: CMakeLists.txt
src/qicore/graphics/: Color.cpp  GLPainter.cpp  GLShader.cpp  GraphicArc.cpp  GraphicCircle.cpp  GraphicLayer.cpp  GraphicLine.cpp  GraphicRectangle.cpp  GraphicText.cpp  GridLayer.cpp
src/qicore/shaders/: circle.frag  circle.vert  shader.vert
src/qicore/ui/: GLScrollArea.cpp  GLWidget.cpp  QiMainWindow.cpp
src/qigerber/: CMakeLists.txt  Gerber.cpp
src/qiviewer/: About.cpp  About.hpp  About.ui  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp  qiviewer.qrc
src/rocore/: CMakeLists.txt  Settings.cpp
src/rocore/graphics/: Color.cpp  GLPainter.cpp  GLShader.cpp  GraphicArc.cpp  GraphicCircle.cpp  GraphicDocument.cpp  GraphicGrid.cpp  GraphicLayer.cpp  GraphicLine.cpp  GraphicPoly.cpp  GraphicRawLine.cpp  GraphicRectangle.cpp  GraphicText.cpp  GridLayer.cpp  TestLayer.cpp  clip2tri.cpp
src/rocore/projects/: Base.cpp  Loader.cpp  Project.cpp  ProjectViewItem.cpp  ProjectViewItemModel.cpp  Viewer.cpp
src/rocore/shaders/: circle.frag  circle.vert  shader.frag  shader.vert
src/rocore/ui/: DocumentView.cpp  GLScrollArea.cpp  GLWidget.cpp  GerberDocumentView.cpp  InputWithUnits.cpp  LayerView.cpp  LayerViewItem.cpp  LayerViewItemModel.cpp  ProjectExplorer.cpp  ProjectExplorerItem.cpp  ProjectExplorerItemModel.cpp  ProjectView.cpp  QiMainWindow.cpp
src/roeda/: CMakeLists.txt  GerberOpenGlProcessor.cpp  GerberOpenGlProcessor.hpp  MainWindow.cpp
src/rogerber/: CMakeLists.txt  CoordinateConverter.cpp  Gerber.cpp  GerberCommands.cpp  GerberCoordinateTranslator.cpp  GerberExecutor.cpp  GerberProcessor.cpp
src/roviewer/: About.ui  CMakeLists.txt  GerberOpenGlProcessor.cpp  GerberOpenGlProcessor.hpp  MainWindow.cpp  MainWindow.h  MainWindow.hpp  main.cpp  roviewer.qrc
src/test/: CMakeLists.txt  GerberTest.cpp
test/: CMakeLists.txt
test/gerbers/: drill-file.gbr  polarties-apertures.gbr  two-square-boxes.gbr
test/rogerber/: TestCoordinateConverter.cpp
